--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,113 @@
     android:background="#000000"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/activity_main_iv_logo"
+        android:layout_width="324dp"
+        android:layout_height="113dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="70dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_green_flag_2x" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/activity_main_tv_main_description"
+        android:layout_width="323dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="48dp"
+        android:text="GreenFlag customers can              create an account to access"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:fontFamily="@font/museosans_500"
+        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_logo"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_iv_logo" />
 
+    <Button
+        android:id="@+id/activity_main_btn_create_an_account"
+        android:layout_width="322dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/gradient_button_background_2x"
+        android:text="Create an account"
+        android:textSize="20sp"
+        android:fontFamily="@font/museosans_300"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="createAccount"/>
+
+    <ImageView
+        android:id="@+id/activity_view_iv_check_1"
+        android:layout_width="20dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_main_tv_main_description"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_main_description"
+        app:srcCompat="@drawable/tick_2x" />
+
+    <ImageView
+        android:id="@+id/activity_view_iv_check_2"
+        android:layout_width="20dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_view_iv_check_1"
+        app:layout_constraintTop_toBottomOf="@+id/activity_view_iv_check_1"
+        app:srcCompat="@drawable/tick_2x" />
+
+    <ImageView
+        android:id="@+id/activity_view_iv_check_3"
+        android:layout_width="20dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_view_iv_check_2"
+        app:layout_constraintTop_toBottomOf="@+id/activity_view_iv_check_2"
+        app:srcCompat="@drawable/tick_2x"
+        tools:layout_editor_absoluteX="44dp" />
+
+    <TextView
+        android:id="@+id/activity_main_tv_1"
+        android:layout_width="208dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:text="Car health updates"
+        android:textColor="#FFFFFFFF"
+        android:textSize="18sp"
+        android:fontFamily="@font/museosans_300"
+        app:layout_constraintStart_toEndOf="@+id/activity_view_iv_check_1"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_main_description" />
+
+    <TextView
+        android:id="@+id/activity_main_tv_2"
+        android:layout_width="208dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="18dp"
+        android:text="Request a rescue online"
+        android:textColor="#FFFFFFFF"
+        android:textSize="18sp"
+        android:fontFamily="@font/museosans_300"
+        app:layout_constraintStart_toEndOf="@+id/activity_view_iv_check_3"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_3" />
+
+    <TextView
+        android:id="@+id/activity_main_tv_3"
+        android:layout_width="208dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:text="Policy information"
+        android:textColor="#FFFFFFFF"
+        android:textSize="18sp"
+        android:fontFamily="@font/museosans_300"
+        app:layout_constraintStart_toEndOf="@+id/activity_view_iv_check_2"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_tv_1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
