Stuff to try and get android studios to work

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="323dp"
         android:layout_height="66dp"
         android:layout_marginTop="48dp"
-        android:text="GreenFlag customers can              create an account to access"
+        android:text="@string/activity_main_greenflag_customers_can_create_an_account_to_access"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:fontFamily="@font/museosans_500"
@@ -40,7 +40,7 @@
         android:layout_height="45dp"
         android:layout_marginBottom="44dp"
         android:background="@drawable/gradient_button_background_2x"
-        android:text="Create an account"
+        android:text="@string/activity_main_btn"
         android:textSize="20sp"
         android:fontFamily="@font/museosans_300"
         android:textAllCaps="false"
@@ -84,7 +84,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="Car health updates"
+        android:text="@string/activity_main_tv_1"
         android:textColor="#FFFFFFFF"
         android:textSize="18sp"
         android:fontFamily="@font/museosans_300"
@@ -97,7 +97,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="18dp"
-        android:text="Request a rescue online"
+        android:text="@string/activity_main_tv_2"
         android:textColor="#FFFFFFFF"
         android:textSize="18sp"
         android:fontFamily="@font/museosans_300"
@@ -110,7 +110,7 @@
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
-        android:text="Policy information"
+        android:text="@string/activity_main_policy_information"
         android:textColor="#FFFFFFFF"
         android:textSize="18sp"
         android:fontFamily="@font/museosans_300"
