--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -7,4 +7,48 @@
     tools:context=".CreateAccount"
     android:background="#000000">
 
+    <EditText
+        android:id="@+id/activity_create_account_til_email"
+        android:inputType="textEmailAddress"
+        android:layout_width="340dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="120dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <EditText
+        android:id="@+id/activity_create_account_til_password"
+        android:inputType="textPassword"
+        android:layout_width="340dp"
+        android:layout_height="48dp"
+        android:background="#FFFFFF"
+        android:layout_marginTop="120dp"
+        app:layout_constraintStart_toStartOf="@id/activity_create_account_til_email"
+        app:layout_constraintTop_toTopOf="@id/activity_create_account_til_email"
+        android:hint="@string/create_account_hint"/>
+
+    <EditText
+        android:id="@+id/activity_create_account_til_password_repeat"
+        android:inputType="textPassword"
+        android:layout_width="340dp"
+        android:layout_height="48dp"
+        android:background="#FFFFFF"
+        android:layout_marginTop="120dp"
+        app:layout_constraintStart_toStartOf="@id/activity_create_account_til_password"
+        app:layout_constraintTop_toTopOf="@id/activity_create_account_til_password"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="343dp"
+        android:layout_height="178dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/create_account_criteria"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password_repeat"
+        app:layout_constraintTop_toBottomOf="@+id/activity_create_account_til_password_repeat" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
