--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -9,15 +9,15 @@
 
     <EditText
         android:id="@+id/activity_create_account_til_email"
-        android:inputType="textEmailAddress"
         android:layout_width="340dp"
         android:layout_height="52dp"
         android:layout_marginTop="120dp"
         android:background="#FFFFFF"
         android:gravity="center"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/activity_create_account_til_password"
@@ -32,16 +32,16 @@
 
     <EditText
         android:id="@+id/activity_create_account_til_password_repeat"
-        android:inputType="textPassword"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:background="#FFFFFF"
         android:layout_marginTop="120dp"
+        android:background="#FFFFFF"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@id/activity_create_account_til_password"
-        app:layout_constraintTop_toTopOf="@id/activity_create_account_til_password"/>
+        app:layout_constraintTop_toTopOf="@id/activity_create_account_til_password" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/activity_create__account_textView"
         android:layout_width="343dp"
         android:layout_height="178dp"
         android:layout_marginTop="20dp"
@@ -50,5 +50,35 @@
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password_repeat"
         app:layout_constraintTop_toBottomOf="@+id/activity_create_account_til_password_repeat" />
+
+    <ImageView
+        android:id="@+id/activity_create__account_imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_email"
+        app:layout_constraintTop_toTopOf="@+id/activity_create_account_til_email"
+        app:srcCompat="@drawable/tick_2x" />
+
+    <ImageView
+        android:id="@+id/activity_create__account_imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password"
+        app:layout_constraintTop_toTopOf="@+id/activity_create_account_til_password"
+        app:srcCompat="@drawable/tick_2x" />
+
+    <ImageView
+        android:id="@+id/activity_create__account_imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password_repeat"
+        app:layout_constraintTop_toTopOf="@+id/activity_create_account_til_password_repeat"
+        app:srcCompat="@drawable/tick_2x" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
