--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -13,7 +13,6 @@
         android:layout_height="52dp"
         android:layout_marginTop="120dp"
         android:background="#FFFFFF"
-        android:gravity="center"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +55,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="292dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_email"
         app:layout_constraintTop_toTopOf="@+id/activity_create_account_til_email"
         app:srcCompat="@drawable/tick_2x" />
@@ -66,7 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="292dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password"
         app:layout_constraintTop_toTopOf="@+id/activity_create_account_til_password"
         app:srcCompat="@drawable/tick_2x" />
@@ -76,9 +77,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="292dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password_repeat"
         app:layout_constraintTop_toTopOf="@+id/activity_create_account_til_password_repeat"
         app:srcCompat="@drawable/tick_2x" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:background="#1FFFFFFF"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="72dp" />
+
+    <TextView
+        android:id="@+id/activity_create_account_title"
+        android:layout_width="348dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:text="@string/activity_create_title"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
