--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -26,7 +26,7 @@
         android:layout_width="340dp"
         android:layout_height="48dp"
         android:background="#FFFFFF"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="90dp"
         app:layout_constraintStart_toStartOf="@id/activity_create_account_til_email"
         app:layout_constraintTop_toTopOf="@id/activity_create_account_til_email"
         android:hint="@string/create_account_hint"
@@ -36,7 +36,7 @@
         android:id="@+id/activity_create_account_til_password_repeat"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="90dp"
         android:background="#FFFFFF"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@id/activity_create_account_til_password"
@@ -86,7 +86,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/activity_create_account_til_email"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_email"
-        tools:text="Email address" />
+        android:text="Email address" />
     <TextView
         android:id="@+id/activity_create_account_tv_password"
         android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/activity_create_account_til_password"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password"
-        tools:text="@string/create_account_create_password" />
+        android:text="@string/create_account_create_password" />
 
     <TextView
         android:id="@+id/activity_create_account_tv_password_repeat"
@@ -107,7 +107,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/activity_create_account_til_password_repeat"
         app:layout_constraintStart_toStartOf="@+id/activity_create_account_til_password_repeat"
-        tools:text="@string/create_account_repeat_password" />
+        android:text="@string/create_account_repeat_password" />
 
     <!-- Error text view boxes -->
 
