--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="120dp"
         android:background="#FFFFFF"
         android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,6 +27,7 @@
         android:layout_width="340dp"
         android:layout_height="48dp"
         android:background="#FFFFFF"
+        android:paddingLeft="10dp"
         android:layout_marginTop="90dp"
         app:layout_constraintStart_toStartOf="@id/activity_create_account_til_email"
         app:layout_constraintTop_toTopOf="@id/activity_create_account_til_email"
@@ -39,6 +41,7 @@
         android:layout_marginTop="90dp"
         android:background="#FFFFFF"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
         app:layout_constraintStart_toStartOf="@id/activity_create_account_til_password"
         app:layout_constraintTop_toTopOf="@id/activity_create_account_til_password"
         android:importantForAutofill="no"
