--- a/app/src/main/res/layout/user_view_holder.xml
+++ b/app/src/main/res/layout/user_view_holder.xml
@@ -1,7 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#424242">
+    android:background="#282A35"
+    android:layout_margin="10dp"
+    tools:context=".Info">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/user_image"
+        android:layout_width="133dp"
+        android:layout_height="133dp"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <!-- First text column -->
+    <LinearLayout
+        android:id="@+id/user_column1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/user_image"
+        app:layout_constraintEnd_toStartOf="@id/user_column2"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Name" />
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Username" />
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_postal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Postal" />
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_country"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Country" />
+    </LinearLayout>
+
+    <!-- Second Column -->
+    <LinearLayout
+        android:id="@+id/user_column2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/user_column1"
+        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_gender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gender" />
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_birthday"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Birthday" />
+        <TextView
+            android:textColor="#FFFFFF"
+            android:id="@+id/user_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Age" />
+        <TextView
+            android:textColor="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
