--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -43,7 +43,7 @@
         android:layout_width="232dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:hint="@string/name"
         android:padding="8dp"
@@ -55,7 +55,7 @@
         android:id="@+id/info_Username"
         android:layout_width="232dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:hint="Username"
         android:padding="8dp"
@@ -66,7 +66,7 @@
         android:id="@+id/info_password"
         android:layout_width="232dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:hint="Password"
         android:padding="8dp"
@@ -78,7 +78,7 @@
         android:id="@+id/activity_info_btn_change_photo"
         android:layout_width="232dp"
         android:layout_height="38dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:width="232dp"
         android:height="53dp"
         android:background="@drawable/gradient_button_background_2x"
@@ -91,7 +91,7 @@
         android:id="@+id/info_age"
         android:layout_width="232dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:hint="@string/age"
         android:padding="8dp"
@@ -99,20 +99,28 @@
         app:layout_constraintStart_toStartOf="@id/activity_info_btn_change_photo"
         app:layout_constraintTop_toBottomOf="@id/activity_info_btn_change_photo" />
 
-    <!--
-    <DatePicker
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    -->
+    <TextView
+        android:id="@+id/activity_info_tv_datepicker"
+        android:layout_width="232dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="10dp"
+        android:width="150dp"
+        android:height="100dp"
+        android:text="Choose birth date"
+        android:textSize="20sp"
+        android:background="#FFFFFF"
+        app:layout_constraintStart_toStartOf="@id/info_age"
+        app:layout_constraintTop_toBottomOf="@id/info_age" />
+
     <Spinner
         android:id="@+id/info_spinner_country"
         android:layout_width="232dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:entries="@array/info_countries_array"
-        app:layout_constraintStart_toStartOf="@id/info_age"
-        app:layout_constraintTop_toBottomOf="@id/info_age" />
+        app:layout_constraintStart_toStartOf="@id/activity_info_tv_datepicker"
+        app:layout_constraintTop_toBottomOf="@id/activity_info_tv_datepicker" />
 
     <RadioGroup
         android:id="@+id/info_radio_group"
@@ -120,7 +128,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/info_spinner_country"
         app:layout_constraintTop_toBottomOf="@id/info_spinner_country"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/info_radio_header"
@@ -158,7 +166,7 @@
         android:id="@+id/info_et_postal"
         android:layout_width="232dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="@string/postal_address_opt"
         android:background="#FFFFFF"
